testdata/golden/sema/valid/module_no_std_multi/helper.fmt
pragma module, no_std;

pub fn helper() -> int {
    return 7;
}
