testdata/golden/sema/invalid/alien_hints/go_defer.fmt
fn main() -> nothing {
    defer(foo());
    return nothing;
}

